frontend: starting deck form + card autocomplete
